<resources>
    <string name="app_name">Degree Planner</string>
    <string name="done">done</string>
    <string name="delete">delete</string>
    <string name="logout">Logout</string>
    <string name="Logout">Logout</string>
    <string name="btnR">btnR</string>
    <string name="prepwell">PrepWell</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="session2">Session</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="student_number">Student Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Prepwell">PrepWell</string>
    <string name="log_in">Log In</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="log_in2">Log In</string>
    <string name="new_here_create_account">New Here? Create Account</string>
    <string name="forgot_password_click_here">Forgot Password? Click Here</string>
    <string name="a_name">DropDownMenu</string>
    <string name="select">Select Course</string>
    <string name="timeLine">Build TimeLine</string>
    <string name="a48">CSCA48</string>
    <string name="a48Desc">
        Abstract data types and data structures for implementing them.
        Linked data structures. Object Oriented Programming. Encapsulation
        and information-hiding. Testing. Specifications. Analyzing the efficiency
        of programs. Recursion.
    </string>

    <string name="s1">
        Timetable Builder
    </string>

    <string name="s2">
        Quickly generate conflict-free timelines with all of your favourite courses.
        Explore different course offerings and find what works best for your schedule.
    </string>

    <string name="s3">
        Generate TimeLine
    </string>

    <string name="col1">Session</string>
    <string name="col2">Course</string>
    <string name="s4">My TimeLine</string>
    <string name="pfp">My Profile</string>
    <string name="changepfp">Change Profile Photo</string>
    <string name="re">Return to Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addC">Add a Course</string>
    <string name="session">Session</string>
    <string name="year">Year</string>
    <string name="for_all">Session Offered</string>
    <string name="mental">If you require immediate help, click the button for available resources.PrepWell</string>
    <string name="email_error">Email is required</string>
    <string name="pass_error">Password is Required</string>
    <string name="must_be">Password Must be >=6</string>
    <string name="add">Add Course</string>

</resources>