<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:hint="@string/select">


        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

        <TextView
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="30dp"
            android:text="@string/s1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <TextView
            android:layout_width="208dp"
            android:layout_height="177dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="30dp"
            android:text="@string/s2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp" />




    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="160dp"
        android:layout_weight="1"
        app:layout_anchor="@+id/textInputLayout"
        app:layout_anchorGravity="center"
        app:srcCompat="@android:drawable/ic_menu_today" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>